2007-01-23  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Add a value for the "no effect" value
	of the border_effect GConf key; add it to the effects combo
	box.  (#399859)

	* gnome-screenshot.schemas.in: Fix the description of the
	border-effect key.

2007-01-22  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Use symbolic names for the GConf keys;
	move the frame creation of the interactive dialog into its
	own function; add an "effects" frame containing a check button
	for the "include window border" option and a combo box for
	the effects on the screenshot.

2007-01-09  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gnome-screenshot.c:  Register "applets-screenshooter" in
	the icon factory so gtk_image_new_from_stock() works.  HIG
	fixes for interactive dialog. (#394941)

2007-01-07  Emmanuele Bassi  <ebassi@gnome.org>

	A gnome-screenshot.c
	D gnome-panel-screenshot.c
	D gnome-panel-screenshot.glade

	* Makefile.am:
	* gnome-screenshot.c: Remove mention of gnome-panel-screenshot
	from the build and code: this is not a panel applet anymore;
	implement the interactive dialog for controlling the settings
	of the screenshot without using the command line switching.

	* screenshot-save.c: Honour TMPDIR using g_get_tmp_dir() and
	use a nicer layout for creating a unique directory for the
	temporary screenshot file: now use a <pid>-<try-n> directory
	under the ${TMPDIR}/gnome-screenshot root.

	* screenshot-utils.[ch]: Add utility functions for showing a
	dialog in case of error.

	* gnome-screenshot.desktop.in: Use the interactive mode when
	launching gnome-screenshot from the menu.

2007-01-04  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-panel-screenshot.c: Add a call to initialise the
	auth manager. (#362903)

2006-12-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-save.c: Apply long-forgotten patch: if we can
	successfully read something from the child pipe, then it's