@@ -1,3 +1,9 @@
+2007-01-24  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* gnome-screenshot.c: Do not leak GnomeProgram instance
+	and don't free the GOptionContext we pass to
+	gnome_program_init(). (#400200, Christian Persch)
+
 2007-01-23  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* gnome-screenshot.c: Add a value for the "no effect" value
